HTML: Fix overflow in canvas

--- a/src/share/poudriere/html/assets/poudriere.css
+++ b/src/share/poudriere/html/assets/poudriere.css
@@ -93,7 +93,7 @@ body {
 }
 
 .layout table {
-	width: 507px; /* canvas width */
+	width: 500px; /* canvas width */
 	margin: 0;
 	line-height: 1;
 }
